@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-10-30 DP  1.8.1  When creating a new index and specifying both tablespace
+                      and fill factor, make sure the SQL is formulated 
+                      correctly, per Stefan Wolf
 2007-10-29 DP  1.8.1  Fix the locks tab on the server status dialogue so it
                       works correctly with PostgreSQL 8.3+.
 2007-10-29 DP  1.8.1  Properly format the object comments shown in the
